--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-joblib
-streamlit
+pandas==2.3.3
+numpy==2.2.6
+scikit-learn==1.7.2
+matplotlib==3.10.8
+seaborn==0.13.2
+joblib==1.5.3
+scipy==1.15.3
+streamlit==1.54.0
+altair==5.3.0
